--- a/app/src/main/res/layout/activity_bridedetails.xml
+++ b/app/src/main/res/layout/activity_bridedetails.xml
@@ -84,7 +84,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:drawableLeft="@drawable/ic_today_black_24dp"
-                            android:inputType="text"
+                            android:inputType="number"
                             android:textColor="#4682B4"
                             android:textSize="16sp"
                             android:layout_margin="8dp"
@@ -279,7 +279,7 @@
                             android:layout_height="wrap_content"
                             android:drawableLeft="@drawable/ic_timer_black_24dp"
                             android:hint="\t\tLength of residence (in years)"
-                            android:inputType="text"
+                            android:inputType="number"
                             android:textColor="#4682B4"
                             android:textSize="16sp"
                             android:layout_margin="8dp"
