--- a/app/src/main/res/layout/activity_appointment_confirmed.xml
+++ b/app/src/main/res/layout/activity_appointment_confirmed.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#e3e3e3"
     android:orientation="vertical">
 
@@ -12,9 +13,46 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:orientation="vertical">
+
+            <android.support.v7.widget.CardView
+                android:layout_width="155dp"
+                android:layout_height="155dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:elevation="10dp"
+                app:cardCornerRadius="80dp">
+
+                <ImageView
+                    android:layout_width="150dp"
+                    android:layout_height="140dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="8dp"
+                    android:paddingLeft="3dp"
+                    android:paddingBottom="2dp"
+                    android:src="@drawable/goablue2" />
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Revenue &amp; Disaster Management"
+                android:textColor="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="20dp"
+                android:gravity="center"
+                android:text="Govt. of Assam"
+                android:textColor="#000"
+                android:textSize="16sp" />
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
@@ -66,16 +104,6 @@
                         android:textSize="17sp"
                         android:layout_margin="5dp"/>
 
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="AS-REG/__/2019"
-                        android:focusable="false"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:textColor="#5F9EA0"
-                        android:background="@drawable/edittext_border"/>
-
 
                     <TextView
                         android:layout_width="match_parent"
@@ -85,136 +113,14 @@
                         android:textColor="#F08080"
                         android:textSize="16sp" />
 
-                    <android.support.v7.widget.CardView
+
+                    <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="match_parent"
                         android:layout_marginStart="8dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="5dp"
-                        android:backgroundTint="#4169E1">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="8dp"
-                            android:text="Appointment Details as follows"
-                            android:textAlignment="center"
-                            android:textColor="#fff"
-                            android:textSize="18sp" />
-
-                    </android.support.v7.widget.CardView>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="8dp"
-                        android:text="Officer assigned:"
-                        android:textSize="17sp" />
-
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="NA"
-                        android:focusable="false"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginBottom="4dp"
-                        android:textColor="#5F9EA0"
-                        android:background="@drawable/edittext_border"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="8dp"
-                        android:text="Consideration Amount:"
-                        android:textSize="17sp" />
-
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:focusable="false"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginBottom="4dp"
-                        android:textColor="#5F9EA0"
-                        android:text="0"
-                        android:background="@drawable/edittext_border"/>
-
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="8dp"
-                        android:text="Appointment Date and time:"
-                        android:textSize="17sp" />
-
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="dd-mm-yy and time"
-                        android:focusable="false"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginBottom="4dp"
-                        android:textColor="#5F9EA0"
-                        android:background="@drawable/edittext_border"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="8dp"
-                        android:text="Registration Fee (In Rupees):"
-                        android:textSize="17sp" />
-
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="Rs..."
-                        android:focusable="false"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginBottom="4dp"
-                        android:textColor="#5F9EA0"
-                        android:background="@drawable/edittext_border"/>
-
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="8dp"
-                        android:text="Stamp Duty (In Rupees):"
-                        android:textSize="17sp" />
-
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="Rs..."
-                        android:focusable="false"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:textColor="#5F9EA0"
-                        android:background="@drawable/edittext_border"/>
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <Button
-                            android:id="@+id/btnPrint"
-                            android:layout_width="100dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="30dp"
-                            android:layout_marginBottom="15dp"
-                            android:backgroundTint="#228B22"
-                            android:drawableLeft="@drawable/ic_file_download_black_24dp"
-                            android:onClick="doPrint"
-                            android:text="Print"
-                            android:textColor="#fff" />
-
-                    </LinearLayout>
+                        android:text="Appointment for appointment id ______ is confirmed. You are requested to report on date ____\n"
+                        android:textColor="#F08080"
+                        android:textSize="16sp" />
 
 
                 </LinearLayout>
