--- a/app/src/main/res/layout/activity_state_progress_bar.xml
+++ b/app/src/main/res/layout/activity_state_progress_bar.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -29,6 +30,25 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="0.5"
                         android:orientation="vertical">
+
+                        <com.kofigyan.stateprogressbar.StateProgressBar
+                            android:id="@+id/state_progress_bar"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="8dp"
+                            app:spb_checkStateCompleted="true"
+                            app:spb_currentStateDescriptionColor="#009688"
+                            app:spb_currentStateNumber="one"
+                            app:spb_descriptionTopSpaceIncrementer="5dp"
+                            app:spb_maxStateNumber="four"
+                            app:spb_stateBackgroundColor="#BDBDBD"
+                            app:spb_stateDescriptionColor="#808080"
+                            app:spb_stateForegroundColor="#009688"
+                            app:spb_stateNumberBackgroundColor="#808080"
+                            app:spb_stateNumberForegroundColor="#eeeeee"
+                            app:spb_stateSize="40dp" />
+
+
 
                         <android.support.v7.widget.CardView
                             android:layout_width="match_parent"
