Commit language and theme

--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -9,7 +9,7 @@
     <item>
 
         <bitmap
-            android:src="@drawable/goablue2"
+            android:src="@drawable/goa"
             android:gravity="center"/>
 
     </item>
