--- a/app/src/main/res/layout/activity_groomdetails.xml
+++ b/app/src/main/res/layout/activity_groomdetails.xml
@@ -64,7 +64,7 @@
                             android:id="@+id/Name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_person_black_24dp"
+                            android:drawableLeft="@drawable/ic_person"
                             android:inputType="text"
                             android:textColor="#4682B4"
                             android:textSize="16sp"
@@ -83,7 +83,7 @@
                             android:id="@+id/Age"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_today_black_24dp"
+                            android:drawableLeft="@drawable/ic_today"
                             android:inputType="text"
                             android:textColor="#4682B4"
                             android:textSize="16sp"
@@ -102,7 +102,7 @@
                             android:id="@+id/Occupation"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_work_black_24dp"
+                            android:drawableLeft="@drawable/ic_work"
                             android:inputType="text"
                             android:textColor="#4682B4"
                             android:textSize="16sp"
@@ -121,7 +121,7 @@
                             android:id="@+id/FName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_father_black_24dp"
+                            android:drawableLeft="@drawable/ic_father"
                             android:inputType="text"
                             android:textColor="#4682B4"
                             android:textSize="16sp"
@@ -170,7 +170,7 @@
                             android:id="@+id/city"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_location_city_black_24dp"
+                            android:drawableLeft="@drawable/ic_location_city"
                             android:hint="\t\tCity/Town/Village *"
                             android:inputType="text"
                             android:textColor="#4682B4"
@@ -187,7 +187,7 @@
                             android:id="@+id/policeStation"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_policestation_black_24dp"
+                            android:drawableLeft="@drawable/ic_location_on"
                             android:hint="\t\tPolice Station *"
                             android:inputType="text"
                             android:textColor="#4682B4"
@@ -205,7 +205,7 @@
                             android:id="@+id/postofficeName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_drafts_black_24dp"
+                            android:drawableLeft="@drawable/ic_drafts"
                             android:hint="\t\tPost Office *"
                             android:inputType="text"
                             android:textColor="#4682B4"
@@ -223,7 +223,7 @@
                             android:id="@+id/districtName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_home_black_24dp"
+                            android:drawableLeft="@drawable/ic_home"
                             android:hint="\t\tDistrict *"
                             android:inputType="text"
                             android:textColor="#4682B4"
@@ -241,7 +241,7 @@
                             android:id="@+id/stateName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_person_pin_circle_black_24dp"
+                            android:drawableLeft="@drawable/ic_person_pin"
                             android:hint="\t\tState *"
                             android:inputType="text"
                             android:textColor="#4682B4"
@@ -259,7 +259,7 @@
                             android:id="@+id/pin"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_fiber_pin_black_24dp"
+                            android:drawableLeft="@drawable/ic_fiber_pin"
                             android:hint="\t\tPIN *"
                             android:inputType="number"
                             android:textColor="#4682B4"
@@ -277,7 +277,7 @@
                             android:id="@+id/lengthResidence"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_timer_black_24dp"
+                            android:drawableLeft="@drawable/ic_timer"
                             android:hint="\t\tLength of residence (in years)"
                             android:inputType="text"
                             android:textColor="#4682B4"
@@ -323,7 +323,7 @@
                             android:id="@+id/per_city"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_location_city_black_24dp"
+                            android:drawableLeft="@drawable/ic_location_city"
                             android:hint="\t\tCity/Town/Village *"
                             android:inputType="text"
                             android:textColor="#4682B4"
@@ -340,7 +340,7 @@
                             android:id="@+id/per_policeStation"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_policestation_black_24dp"
+                            android:drawableLeft="@drawable/ic_location_on"
                             android:hint="\t\tPolice Station *"
                             android:inputType="text"
                             android:textColor="#4682B4"
@@ -358,7 +358,7 @@
                             android:id="@+id/per_postofficeName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_drafts_black_24dp"
+                            android:drawableLeft="@drawable/ic_drafts"
                             android:hint="\t\tPost Office *"
                             android:inputType="text"
                             android:textColor="#4682B4"
@@ -376,7 +376,7 @@
                             android:id="@+id/per_districtName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_home_black_24dp"
+                            android:drawableLeft="@drawable/ic_home"
                             android:hint="\t\tDistrict *"
                             android:inputType="text"
                             android:textColor="#4682B4"
@@ -394,7 +394,7 @@
                             android:id="@+id/per_stateName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_person_pin_circle_black_24dp"
+                            android:drawableLeft="@drawable/ic_person_pin"
                             android:hint="\t\tState *"
                             android:inputType="text"
                             android:textColor="#4682B4"
@@ -412,7 +412,7 @@
                             android:id="@+id/per_pin"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_fiber_pin_black_24dp"
+                            android:drawableLeft="@drawable/ic_fiber_pin"
                             android:hint="\t\tPIN *"
                             android:inputType="number"
                             android:textColor="#4682B4"
