--- a/app/src/main/res/drawable/edittext_border.xml
+++ b/app/src/main/res/drawable/edittext_border.xml
@@ -4,7 +4,7 @@
 
     <item><layer-list>
         <item><shape>
-            <stroke android:width="1dp" android:color="#1E90FF" />
+            <stroke android:width="1dp" android:color="#EEEEEE"/>
             <padding android:bottom="8dp" android:left="4dp" android:right="2dp" android:top="8dp" />
         </shape></item>
 
