--- a/app/src/main/res/layout/activity_appointment_confirmed.xml
+++ b/app/src/main/res/layout/activity_appointment_confirmed.xml
@@ -33,7 +33,7 @@
                     android:layout_marginBottom="8dp"
                     android:paddingLeft="3dp"
                     android:paddingBottom="2dp"
-                    android:src="@drawable/goablue2" />
+                    android:src="@drawable/goa" />
             </android.support.v7.widget.CardView>
 
             <TextView
