--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F5F5"
     tools:context=".MainActivity">
 
     <ScrollView
@@ -34,103 +33,99 @@
                     android:layout_marginBottom="8dp"
                     android:paddingLeft="3dp"
                     android:paddingBottom="2dp"
-                    android:src="@drawable/goablue2" />
+                    android:src="@drawable/goa" />
             </android.support.v7.widget.CardView>
 
             <TextView
+                android:id="@+id/revText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Revenue &amp; Disaster Management"
-                android:textColor="#000"
+                android:text="@string/rev"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/govText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="20dp"
                 android:gravity="center"
-                android:text="Govt. of Assam"
-                android:textColor="#000"
+                android:text="@string/gov"
                 android:textSize="16sp" />
 
-                <GridLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_marginBottom="12dp"
-                    android:layout_weight="8"
-                    android:alignmentMode="alignMargins"
-                    android:columnCount="2"
-                    android:rowCount="2">
+            <!--<GridLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_marginBottom="12dp"-->
+            <!--android:layout_weight="8"-->
+            <!--android:alignmentMode="alignMargins"-->
+            <!--android:columnCount="2"-->
+            <!--android:rowCount="2">-->
 
-                  <!--<LinearLayout-->
-                      <!--android:layout_width="match_parent"-->
-                      <!--android:layout_height="match_parent"-->
-                      <!--android:gravity="center"-->
-                      <!--android:orientation="horizontal">-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-                    <Button
-                        android:id="@+id/button"
-                        android:layout_width="157dp"
-                        android:layout_height="210dp"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginEnd="15dp"
-                        android:layout_marginBottom="15dp"
-                        android:background="#fff"
-                        android:drawableTop="@drawable/money"
-                        android:text="Instant assessment &amp; deed registration fee"
-                        android:textSize="14sp"
-                        android:onClick="combineForm"/>
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="157dp"
+                    android:layout_height="215dp"
+                    android:onClick="combineForm"
+                    android:text="@string/ins"
+                    android:textSize="14sp"
+                    android:drawableTop="@drawable/money"
+                    android:layout_marginRight="10dp"/>
 
-                    <Button
-                        android:id="@+id/button2"
-                        android:layout_width="157dp"
-                        android:layout_height="210dp"
-                        android:layout_marginTop="14dp"
-                        android:background="#fff"
-                        android:drawableTop="@drawable/addfriend"
-                        android:onClick="doDeedRegister"
-                        android:paddingTop="12dp"
-                        android:text="Deed\nRegistration"
-                        android:textSize="14sp" />
 
-                  <!--</LinearLayout>-->
 
-            <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:orientation="horizontal">-->
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="157dp"
+                    android:layout_height="215dp"
+                    android:onClick="doDeedRegister"
+                    android:text="@string/deed"
+                    android:drawableTop="@drawable/addfriend"
+                    android:textSize="14sp" />
 
-                    <Button
-                        android:id="@+id/button3"
-                        android:layout_width="157dp"
-                        android:layout_height="210dp"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginEnd="15dp"
-                        android:layout_marginBottom="10dp"
-                        android:background="#fff"
-                        android:drawableTop="@drawable/weddingrings"
-                        android:onClick="doMarriageRegistration"
-                        android:paddingTop="9dp"
-                        android:text="Marriage\nRegistration"
-                        android:textSize="14sp" />
 
-                    <Button
-                        android:id="@+id/button4"
-                        android:layout_width="157dp"
-                        android:layout_height="210dp"
-                        android:layout_marginTop="0dp"
-                        android:background="#fff"
-                        android:drawableTop="@drawable/eye"
-                        android:paddingTop="9dp"
-                        android:text="View Appointment Status"
-                        android:onClick="doViewStaus"
-                        android:textSize="14sp" />
+            </LinearLayout>
 
-                  <!--</LinearLayout>-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal">
 
-                </GridLayout>
+                <Button
+                    android:id="@+id/button3"
+                    android:layout_width="157dp"
+                    android:layout_height="215dp"
+                    android:onClick="doMarriageRegistration"
+                    android:text="@string/marr"
+                    android:textSize="14sp"
+                    android:layout_marginRight="10dp"
+                    android:drawableTop="@drawable/weddingrings"/>
+
+
+
+                <Button
+                    android:id="@+id/button4"
+                    android:layout_width="157dp"
+                    android:layout_height="215dp"
+                    android:onClick="doViewStaus"
+                    android:text="@string/view"
+                    android:textSize="14sp"
+                    android:drawableTop="@drawable/eyeyellow" />
+
+
+            </LinearLayout>
+
+            <!--</GridLayout>-->
 
         </LinearLayout>
 
