--- a/app/src/main/res/layout/activity_view_status.xml
+++ b/app/src/main/res/layout/activity_view_status.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#e3e3e3"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
 
@@ -21,7 +20,7 @@
             android:focusableInTouchMode="true"
             android:gravity="center"
             android:padding="5dp"
-            android:text="Check your Appointment Status"
+            android:text="@string/check"
             android:textColor="#fff"
             android:textSize="18sp" />
 
@@ -29,11 +28,10 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="485dp"
+        android:layout_height="180dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="10dp">
+        android:layout_marginEnd="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,11 +51,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:background="@drawable/edittext_border"
-                    android:drawableLeft="@drawable/ic_keyboard_black_24dp"
-                    android:hint="\t\tReference No. *"
+                    android:drawableLeft="@drawable/ic_keyboard"
+                    android:hint="@string/reff"
                     android:inputType="phone"
-                    android:textColor="#5F9EA0"
                     android:textSize="16sp" />
             </android.support.design.widget.TextInputLayout>
 
@@ -65,9 +61,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
-            android:layout_marginTop="80dp">
+            android:layout_height="wrap_content"
+            android:gravity="center|bottom"
+            android:layout_marginTop="130dp">
 
             <Button
                 android:id="@+id/btnSubmit"
@@ -75,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#228B22"
                 android:onClick="checkStatus"
-                android:text="Check Status"
+                android:text="@string/checkstatus"
                 android:textColor="#fff" />
 
         </LinearLayout>
