--- a/app/src/main/res/layout/spinner_item_text_colour.xml
+++ b/app/src/main/res/layout/spinner_item_text_colour.xml
@@ -4,7 +4,4 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="16sp"
-    android:padding="5dp"
-    android:textColor="	#A9A9A9"/>
-
-    <!--#5F9EA0-->
+    android:padding="5dp" />
