--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,23 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-
-        <item name="actionOverflowMenuStyle">@style/MyOverflowMenu</item>
-
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <!--<item name="textColorError">@color/errorColor</item>-->
-
+        <item name="android:colorBackground">@color/colorBackground</item>
     </style>
 
-    <style name="MyOverflowMenu" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="overlapAnchor">false</item>
-        <item name="android:overlapAnchor" tools:ignore="NewApi">false</item>
-        <item name="android:dropDownVerticalOffset">4.0dip</item>
-    </style>
+    <!--<style name="MyOverflowMenu" parent="Theme.AppCompat.Light.DarkActionBar">-->
+        <!--<item name="overlapAnchor">false</item>-->
+        <!--<item name="android:overlapAnchor" tools:ignore="NewApi">false</item>-->
+        <!--<item name="android:dropDownVerticalOffset">4.0dip</item>-->
+    <!--</style>-->
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/background_splash</item>
